--- a/app/src/main/res/layout/activity_camera.xml
+++ b/app/src/main/res/layout/activity_camera.xml
@@ -8,50 +8,52 @@
 
     <Button
         android:id="@+id/btn"
-        android:layout_width="wrap_content"
+        android:layout_width="200dp"
         android:layout_height="wrap_content"
         android:text="@string/take_photo"
-        android:layout_centerHorizontal="true"/>
+        android:layout_centerHorizontal="true"
+        android:background="@drawable/button_main"
+        android:textColor="@android:color/white"/>
 
     <ImageView
         android:layout_width="match_parent"
         android:layout_height="250dp"
-        android:layout_centerInParent="true"
-        android:id="@+id/image"/>
+        android:layout_below="@+id/btn"
+        android:layout_marginTop="16dp"
+        android:id="@+id/image"
+        android:background="@drawable/rectangle_field"/>
 
     <TextView
         android:id="@+id/textView"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_alignParentBottom="true"
-        android:layout_alignStart="@+id/textView2"
-        android:layout_marginBottom="117dp"
+        android:layout_below="@+id/image"
+        android:layout_marginTop="20dp"
+        android:layout_alignParentStart="true"
         android:text="@string/nameText"
         android:textColor="@android:color/black"
-        android:textSize="15sp" />
+        android:textSize="20sp" />
 
     <TextView
         android:id="@+id/textView2"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_alignParentBottom="true"
+        android:layout_below="@+id/textView"
+        android:layout_marginTop="8dp"
         android:layout_alignParentStart="true"
-        android:layout_marginBottom="87dp"
-        android:layout_marginStart="16dp"
         android:text="@string/pathText"
         android:textColor="@android:color/black"
-        android:textSize="15sp" />
+        android:textSize="20sp" />
 
     <TextView
         android:id="@+id/textView3"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_alignParentStart="true"
-        android:layout_alignTop="@+id/textView"
-        android:layout_marginStart="147dp"
+        android:layout_alignBaseline="@+id/textView"
+        android:layout_toEndOf="@+id/textView"
         android:text="@string/name"
-        android:textColor="@android:color/holo_blue_light"
-        android:textSize="15sp" />
+        android:textColor="@color/colorPrimary"
+        android:textSize="20sp" />
 
     <TextView
         android:id="@+id/textView4"
@@ -60,6 +62,6 @@
         android:layout_alignTop="@+id/textView2"
         android:layout_toEndOf="@+id/textView"
         android:text="@string/path"
-        android:textColor="@android:color/holo_blue_light"
-        android:textSize="15sp" />
+        android:textColor="@color/colorPrimary"
+        android:textSize="20sp" />
 </RelativeLayout>
