--- a/app/src/main/res/layout/activity_manager_edreception.xml
+++ b/app/src/main/res/layout/activity_manager_edreception.xml
@@ -75,10 +75,11 @@
             <Button
                 android:id="@+id/btn_zakazchik"
                 android:layout_width="match_parent"
-                android:layout_height="40dp"
-                android:hint="Заказчик"
+                android:layout_height="50dp"
+                android:hint="  Заказчик"
                 android:textColorHint="@color/colorPrimary"
-                android:textSize="18sp"
+                android:textSize="22sp"
+                android:background="@android:color/white"
                 android:textAlignment="textStart"/>
 
             <RelativeLayout
@@ -101,7 +102,7 @@
 
                 <EditText
                     android:id="@+id/et_z_zakazchik"
-                    android:layout_width="wrap_content"
+                    android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:layout_alignParentEnd="true"
                     android:layout_toEndOf="@+id/tv_2"
@@ -122,7 +123,7 @@
 
                 <EditText
                     android:id="@+id/et_z_pochta"
-                    android:layout_width="wrap_content"
+                    android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:layout_alignParentEnd="true"
                     android:layout_below="@+id/et_z_zakazchik"
@@ -145,7 +146,7 @@
 
                 <EditText
                     android:id="@+id/et_z_dogovor"
-                    android:layout_width="wrap_content"
+                    android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:layout_alignParentEnd="true"
                     android:layout_below="@+id/et_z_pochta"
@@ -159,10 +160,11 @@
             <Button
                 android:id="@+id/btn_otpravitel"
                 android:layout_width="match_parent"
-                android:layout_height="40dp"
-                android:hint="Отправитель"
+                android:layout_height="50dp"
+                android:hint="  Отправитель"
                 android:textColorHint="@color/colorPrimary"
-                android:textSize="18sp"
+                android:textSize="22sp"
+                android:background="@android:color/white"
                 android:textAlignment="textStart"/>
 
             <RelativeLayout
@@ -184,7 +186,7 @@
 
                 <EditText
                     android:id="@+id/et_z_otprav"
-                    android:layout_width="wrap_content"
+                    android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:layout_toEndOf="@+id/tv_5"
                     android:layout_alignParentEnd="true"
@@ -205,7 +207,7 @@
 
                 <EditText
                     android:id="@+id/et_z_otkuda"
-                    android:layout_width="wrap_content"
+                    android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:layout_toEndOf="@+id/tv_6"
                     android:layout_below="@+id/et_z_otprav"
@@ -227,7 +229,7 @@
 
                 <EditText
                     android:id="@+id/et_z_adres"
-                    android:layout_width="wrap_content"
+                    android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:layout_toEndOf="@+id/tv_7"
                     android:layout_alignParentEnd="true"
@@ -249,7 +251,7 @@
 
                 <EditText
                     android:id="@+id/et_z_kontakt"
-                    android:layout_width="wrap_content"
+                    android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:layout_toEndOf="@+id/tv_8"
                     android:layout_alignParentEnd="true"
@@ -271,7 +273,7 @@
 
                 <EditText
                     android:id="@+id/et_z_telefon"
-                    android:layout_width="wrap_content"
+                    android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:layout_toEndOf="@+id/tv_9"
                     android:layout_alignParentEnd="true"
@@ -285,10 +287,11 @@
             <Button
                 android:id="@+id/btn_poluchatel"
                 android:layout_width="match_parent"
-                android:layout_height="40dp"
-                android:hint="Получатель"
+                android:layout_height="50dp"
+                android:hint="  Получатель"
                 android:textColorHint="@color/colorPrimary"
-                android:textSize="18sp"
+                android:textSize="22sp"
+                android:background="@android:color/white"
                 android:textAlignment="textStart"/>
 
             <RelativeLayout
@@ -311,7 +314,7 @@
 
                 <EditText
                     android:id="@+id/et_p_poluch"
-                    android:layout_width="wrap_content"
+                    android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:layout_toEndOf="@+id/tv_p_1"
                     android:text="//получатель"
@@ -340,7 +343,8 @@
                         android:layout_marginStart="8dp"
                         android:text="Дата  "
                         android:textColor="@color/colorPrimary"
-                        android:textSize="18sp" />
+                        android:textSize="18sp"
+                        android:textStyle="bold"/>
 
                     <EditText
                         android:id="@+id/et_date_edit"
@@ -377,7 +381,8 @@
                             android:layout_marginTop="12dp"
                             android:text="Количество:"
                             android:textColor="@color/colorPrimary"
-                            android:textSize="18sp" />
+                            android:textSize="18sp"
+                            android:textStyle="bold"/>
 
                         <TextView
                             android:layout_width="wrap_content"
@@ -385,7 +390,8 @@
                             android:layout_marginTop="19dp"
                             android:text="Вес:"
                             android:textColor="@color/colorPrimary"
-                            android:textSize="18sp" />
+                            android:textSize="18sp"
+                            android:textStyle="bold"/>
 
                         <TextView
                             android:layout_width="wrap_content"
@@ -393,7 +399,8 @@
                             android:layout_marginTop="21dp"
                             android:text="Объём:"
                             android:textColor="@color/colorPrimary"
-                            android:textSize="18sp" />
+                            android:textSize="18sp"
+                            android:textStyle="bold"/>
 
                     </LinearLayout>
 
@@ -414,7 +421,7 @@
 
                         <EditText
                             android:id="@+id/et_p_kolich"
-                            android:layout_width="wrap_content"
+                            android:layout_width="match_parent"
                             android:layout_height="wrap_content"
                             android:text="//num"
                             android:textColor="@color/colorPrimary"
@@ -422,7 +429,7 @@
 
                         <EditText
                             android:id="@+id/et_p_ves"
-                            android:layout_width="wrap_content"
+                            android:layout_width="match_parent"
                             android:layout_height="wrap_content"
                             android:text="//num"
                             android:textColor="@color/colorPrimary"
@@ -430,7 +437,7 @@
 
                         <EditText
                             android:id="@+id/et_p_obiem"
-                            android:layout_width="wrap_content"
+                            android:layout_width="match_parent"
                             android:layout_height="wrap_content"
                             android:text="//num"
                             android:textColor="@color/colorPrimary"
@@ -454,7 +461,7 @@
 
                         <EditText
                             android:id="@+id/et_f_kolich"
-                            android:layout_width="wrap_content"
+                            android:layout_width="match_parent"
                             android:layout_height="wrap_content"
                             android:text="//num"
                             android:textColor="@color/colorPrimary"
@@ -462,7 +469,7 @@
 
                         <EditText
                             android:id="@+id/et_f_ves"
-                            android:layout_width="wrap_content"
+                            android:layout_width="match_parent"
                             android:layout_height="wrap_content"
                             android:text="//num"
                             android:textColor="@color/colorPrimary"
@@ -470,7 +477,7 @@
 
                         <EditText
                             android:id="@+id/et_f_obiem"
-                            android:layout_width="wrap_content"
+                            android:layout_width="match_parent"
                             android:layout_height="wrap_content"
                             android:text="//num"
                             android:textColor="@color/colorPrimary"
@@ -492,7 +499,7 @@
                         android:layout_width="0dp"
                         android:layout_height="32dp"
                         android:layout_weight="40"
-                        android:elevation="10dp"></Spinner>
+                        android:elevation="10dp"/>
 
                     <ImageView
                         android:layout_width="wrap_content"
@@ -505,7 +512,7 @@
                         android:layout_width="0dp"
                         android:layout_height="32dp"
                         android:layout_weight="40"
-                        android:elevation="10dp"></Spinner>
+                        android:elevation="10dp"/>
 
                 </LinearLayout>
 
@@ -529,11 +536,12 @@
                             android:text="Информация о грузе: "
                             android:textAlignment="textStart"
                             android:textColor="@color/colorPrimary"
-                            android:textSize="18sp" />
+                            android:textSize="18sp"
+                            android:textStyle="bold"/>
 
                         <EditText
                             android:id="@+id/et_info"
-                            android:layout_width="wrap_content"
+                            android:layout_width="match_parent"
                             android:layout_height="wrap_content"
                             android:layout_weight="100"
                             android:text="//инфо"
@@ -556,11 +564,12 @@
                             android:text="Вид перевозки: "
                             android:textAlignment="textStart"
                             android:textColor="@color/colorPrimary"
-                            android:textSize="18sp" />
+                            android:textSize="18sp"
+                            android:textStyle="bold"/>
 
                         <EditText
                             android:id="@+id/et_vid"
-                            android:layout_width="wrap_content"
+                            android:layout_width="match_parent"
                             android:layout_height="wrap_content"
                             android:layout_weight="100"
                             android:text="//вид"
@@ -583,11 +592,12 @@
                             android:text="Доставка: "
                             android:textAlignment="textStart"
                             android:textColor="@color/colorPrimary"
-                            android:textSize="18sp" />
+                            android:textSize="18sp"
+                            android:textStyle="bold"/>
 
                         <EditText
                             android:id="@+id/et_dostavka"
-                            android:layout_width="wrap_content"
+                            android:layout_width="match_parent"
                             android:layout_height="wrap_content"
                             android:layout_weight="100"
                             android:text="//доставка"
@@ -610,11 +620,12 @@
                             android:text="Стоимость: "
                             android:textAlignment="textStart"
                             android:textColor="@color/colorPrimary"
-                            android:textSize="18sp" />
+                            android:textSize="18sp"
+                            android:textStyle="bold"/>
 
                         <EditText
                             android:id="@+id/et_stoimost"
-                            android:layout_width="wrap_content"
+                            android:layout_width="match_parent"
                             android:layout_height="wrap_content"
                             android:layout_weight="100"
                             android:text="//стоимость"
@@ -637,11 +648,12 @@
                             android:text="Статус заказа: "
                             android:textAlignment="textStart"
                             android:textColor="@color/colorPrimary"
-                            android:textSize="18sp" />
+                            android:textSize="18sp"
+                            android:textStyle="bold"/>
 
                         <EditText
                             android:id="@+id/et_status"
-                            android:layout_width="wrap_content"
+                            android:layout_width="match_parent"
                             android:layout_height="wrap_content"
                             android:layout_weight="100"
                             android:text="//статус"
@@ -660,7 +672,9 @@
                     android:hint="Документы"
                     android:textAlignment="textStart"
                     android:textColorHint="@color/colorPrimary"
-                    android:textSize="18sp" />
+                    android:textSize="22sp"
+                    android:textStyle="bold"
+                    android:background="@android:color/white"/>
 
                 <TextView
                     android:layout_width="match_parent"
@@ -688,19 +702,21 @@
                         android:id="@+id/btn_sohranit"
                         android:layout_width="match_parent"
                         android:layout_height="40dp"
-                        android:hint="Сохранить"
+                        android:hint="  Сохранить"
                         android:textAlignment="textStart"
-                        android:textColorHint="@color/colorPrimary"
-                        android:textSize="18sp" />
+                        android:textColorHint="@android:color/white"
+                        android:textSize="22sp"
+                        android:background="@color/colorPrimary" />
 
                     <Button
                         android:id="@+id/btn_otmenit"
                         android:layout_width="match_parent"
-                        android:layout_height="40dp"
-                        android:hint="Отменить"
+                        android:hint="  Отменить"
                         android:textAlignment="textStart"
-                        android:textColorHint="@color/colorPrimary"
-                        android:textSize="18sp" />
+                        android:background="@color/otpravitelRed"
+                        android:textColorHint="@android:color/white"
+                        android:textSize="22sp"
+                        android:layout_height="50dp" />
                 </LinearLayout>
 
             </LinearLayout>
