--- a/app/src/main/res/layout/activity_manager_edreception.xml
+++ b/app/src/main/res/layout/activity_manager_edreception.xml
@@ -586,7 +586,7 @@
 
                     <Spinner
                         android:id="@+id/mactv_otkuda"
-                        android:layout_width="0dp"
+                        android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
                         android:layout_weight="40"
                         android:elevation="10dp" />
@@ -599,7 +599,7 @@
 
                     <Spinner
                         android:id="@+id/mactv_kuda"
-                        android:layout_width="0dp"
+                        android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
                         android:layout_weight="40"
                         android:elevation="10dp" />
@@ -657,7 +657,7 @@
                             android:textSize="18sp"
                             android:textStyle="bold"/>
 
-                        <MultiAutoCompleteTextView
+                        <Spinner
                             android:id="@+id/mactv_vid"
                             android:layout_width="match_parent"
                             android:layout_height="wrap_content"
@@ -741,7 +741,7 @@
                             android:textSize="18sp"
                             android:textStyle="bold"/>
 
-                        <MultiAutoCompleteTextView
+                        <Spinner
                             android:id="@+id/mactv_status"
                             android:layout_width="match_parent"
                             android:layout_height="wrap_content"
