--- a/app/src/main/res/layout/activity_manager_edreception.xml
+++ b/app/src/main/res/layout/activity_manager_edreception.xml
@@ -104,7 +104,7 @@
                         android:textColor="@color/colorPrimary"
                         android:textSize="18sp" />
 
-                    <MultiAutoCompleteTextView
+                    <Spinner
                         android:id="@+id/mactv_z_zakazchik"
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"
@@ -126,7 +126,7 @@
                         android:textColor="@color/colorPrimary"
                         android:textSize="18sp" />
 
-                    <MultiAutoCompleteTextView
+                    <TextView
                         android:id="@+id/mactv_z_pochta"
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"
@@ -208,15 +208,17 @@
                         android:layout_height="wrap_content"
                         android:text="Куда: "
                         android:textColor="@android:color/black"
-                        android:textSize="18sp" />
+                        android:textSize="18sp"
+                        android:visibility="gone" />
 
                     <MultiAutoCompleteTextView
                         android:id="@+id/mactv_z_otkuda"
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"
                         android:text="//откуда"
+                        android:textColor="@android:color/black"
                         android:textSize="18sp"
-                        android:textColor="@android:color/black"/>
+                        android:visibility="gone" />
                 </LinearLayout>
 
                 <LinearLayout
@@ -334,7 +336,8 @@
                         android:layout_height="wrap_content"
                         android:text="Откуда: "
                         android:textColor="@android:color/black"
-                        android:textSize="18sp" />
+                        android:textSize="18sp"
+                        android:visibility="gone" />
 
                     <MultiAutoCompleteTextView
                         android:id="@+id/mactv_p_otkuda"
@@ -342,7 +345,8 @@
                         android:layout_height="wrap_content"
                         android:text="//откуда"
                         android:textColor="@android:color/black"
-                        android:textSize="18sp" />
+                        android:textSize="18sp"
+                        android:visibility="gone" />
                 </LinearLayout>
 
                 <LinearLayout
