--- a/app/src/main/res/layout/activity_manager_edreception.xml
+++ b/app/src/main/res/layout/activity_manager_edreception.xml
@@ -784,7 +784,116 @@
                     android:layout_width="match_parent"
                     android:layout_height="44dp"
                     android:ems="10"
-                    android:inputType="textMultiLine" />
+                    android:inputType="textMultiLine"
+                    android:background="@drawable/rectangle_field"
+                    android:padding="8dp"/>
+
+                <LinearLayout
+                    android:weightSum="100"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:orientation="horizontal"
+                    android:gravity="center">
+
+                    <LinearLayout
+                        android:layout_width="match_parent"
+                        android:layout_height="match_parent"
+                        android:orientation="vertical"
+                        android:layout_weight="50"
+                        android:padding="20dp">
+
+                        <Button
+                            android:id="@+id/btn_etiketka"
+                            android:layout_width="match_parent"
+                            android:layout_height="50dp"
+                            android:layout_marginBottom="10dp"
+                            android:background="@drawable/button_main"
+                            android:hint="Этикетка"
+                            android:textColorHint="@android:color/white"
+                            android:textSize="18sp" />
+
+                        <Button
+                            android:id="@+id/btn_ekspeditor"
+                            android:layout_width="match_parent"
+                            android:layout_height="50dp"
+                            android:layout_marginBottom="10dp"
+                            android:background="@drawable/button_main"
+                            android:hint="Экспедиторская расписка"
+                            android:textColorHint="@android:color/white"
+                            android:textSize="18sp" />
+
+                        <Button
+                            android:id="@+id/btn_posmotret"
+                            android:layout_width="match_parent"
+                            android:layout_height="50dp"
+                            android:layout_marginBottom="10dp"
+                            android:background="@drawable/button_main"
+                            android:hint="Посмотреть"
+                            android:textColorHint="@android:color/white"
+                            android:textSize="18sp" />
+
+                        <Button
+                            android:id="@+id/btn_akt"
+                            android:layout_width="match_parent"
+                            android:layout_height="50dp"
+                            android:layout_marginBottom="10dp"
+                            android:background="@drawable/button_main"
+                            android:hint="Сформировать Акт"
+                            android:textColorHint="@android:color/white"
+                            android:textSize="18sp" />
+
+                    </LinearLayout>
+
+                    <LinearLayout
+                        android:layout_width="match_parent"
+                        android:layout_height="match_parent"
+                        android:orientation="vertical"
+                        android:layout_weight="50"
+                        android:padding="20dp">
+
+                        <Button
+                            android:id="@+id/btn_schet"
+                            android:layout_width="match_parent"
+                            android:layout_height="50dp"
+                            android:layout_marginBottom="10dp"
+                            android:background="@drawable/button_main"
+                            android:hint="Счет на оплату"
+                            android:textColorHint="@android:color/white"
+                            android:textSize="18sp" />
+
+                        <Button
+                            android:id="@+id/btn_zagruzit"
+                            android:layout_width="match_parent"
+                            android:layout_height="50dp"
+                            android:layout_marginBottom="10dp"
+                            android:background="@drawable/button_main"
+                            android:hint="Загрузить"
+                            android:textColorHint="@android:color/white"
+                            android:textSize="18sp" />
+
+                        <Button
+                            android:id="@+id/btn_etiketka_klient"
+                            android:layout_width="match_parent"
+                            android:layout_height="50dp"
+                            android:layout_marginBottom="10dp"
+                            android:background="@drawable/button_main"
+                            android:hint="Этикетка для клиента"
+                            android:textColorHint="@android:color/white"
+                            android:textSize="18sp" />
+
+                        <Button
+                            android:id="@+id/btn_foto_gruza"
+                            android:layout_width="match_parent"
+                            android:layout_height="50dp"
+                            android:layout_marginBottom="10dp"
+                            android:background="@drawable/button_main"
+                            android:hint="Фото груза"
+                            android:textColorHint="@android:color/white"
+                            android:textSize="18sp" />
+
+                    </LinearLayout>
+
+                </LinearLayout>
 
                 <LinearLayout
                     android:layout_width="match_parent"
