--- a/app/src/main/res/menu/pdf_menu.xml
+++ b/app/src/main/res/menu/pdf_menu.xml
@@ -5,14 +5,16 @@
     <item
         android:id="@+id/pdf_create"
         android:title="@string/generate"
+        android:visible="false"
         app:showAsAction="always" />
     <item
         android:id="@+id/btn_print"
         android:title="print"
+        android:visible="false"
         app:showAsAction="always" />
     <item
         android:id="@+id/btn_ok"
-        android:title="OK"
+        android:title="Открыть"
         app:showAsAction="always" />
     <item
         android:id="@+id/btn_next"
