--- a/app/src/main/res/menu/pdf_menu.xml
+++ b/app/src/main/res/menu/pdf_menu.xml
@@ -25,6 +25,6 @@
     <item
         android:id="@+id/btn_next"
         android:title="Далее"
-        android:visible="false"
+        android:visible="true"
         app:showAsAction="always" />
 </menu>
