--- a/app/src/main/res/layout/activity_sign_in.xml
+++ b/app/src/main/res/layout/activity_sign_in.xml
@@ -11,27 +11,18 @@
     android:background="@android:color/white">
 
     <LinearLayout
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:orientation="horizontal"
-        android:layout_gravity="center">
-
-        <ImageView
-            android:id="@+id/iv_logo_main"
-            android:layout_width="150dp"
-            android:layout_height="102dp"
-            android:layout_weight="1"
-            app:srcCompat="@drawable/smaller_logo"
-            />
-
-    </LinearLayout>
-
-    <LinearLayout
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:orientation="vertical"
         android:gravity="left"
         >
+
+        <ImageView
+            android:id="@+id/iv_logo_main"
+            android:layout_width="match_parent"
+            android:layout_height="102dp"
+            android:layout_weight="1"
+            app:srcCompat="@drawable/smaller_logo" />
 
         <EditText
             android:id="@+id/et_login"
@@ -44,6 +35,7 @@
             android:textColor="@color/signInHint"
             android:layout_marginTop="24dp"
             android:background="@drawable/vector"
+            android:paddingStart="8dp"
 
             />
 
@@ -58,6 +50,7 @@
             android:textColor="@color/signInHint"
             android:layout_marginTop="24dp"
             android:background="@drawable/vector"
+            android:paddingStart="8dp"
             />
 
         <Button
