--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -10,4 +10,10 @@
 
     <style name="AppTheme.NoActionBar"></style>
 
+    <style name = "PlainStyle" parent="TextAppearance.AppCompat">
+
+        <item name="android:textColor">#00FF00</item>
+
+    </style>
+
 </resources>
